* Added Sharks.
    * Spawns in all Ocean biomes.
    * Large, hostile mobs that deal heavy damage to the Player.
    * When killed by a Shark, a custom death message displays.
        * "[Player] got ate by a shark. Yum."
    * Drops include Shark Teeth and Shagreen (Shark leather).
    * Hostile towards fish as well.
* Fish will now avoid Sharks.

[2.6.1]

* Added Shinium.
    * Can serve as a replacement for platinum.
* Added four kinds of sticks.
    * White Cave Marble, Black Cave Marble, Lapis and Power
* Swords and gems are now craftable.
* Added mobs:
    * Baby Dragon
        * Currently unfinished.
        * Planned to be tameable.
        * Can be mounted and somewhat controlled with an ender pearl.
* Super Charged Coal items can now be crafted into Super Charged Coal blocks.
    * Blocks cannot be used as fuel at this time.
* Swamp Clay can now be crafted back and forth, from block form to item form.
* Registered some ores, ingots, blocks and dusts with the OreDictionary.
* Raw duck and shrimp can now be cooked into their respective, cooked counterparts.
* Chicken and duck eggs can now be cooked into boiled eggs.
* Readded mobs:
    * Shadow Skeleton
        * Does not burn in sunlight.
    * Mummy
        * Only spawns in desert-like biomes
        * Always spawns with either a diamond or amaranth sword
* Treasure chests now have a 10 in 20 (50%) chance of generating in oceans at layers 32 and below.
    * Almost always contain a full stack of gold ingots.
* Began work on quivers.
    * Not obtainable in Survival.
    * GUI currently glitchy and nonfunctional.
    * Accepts arrows, but "eats" them and does not give them back.
    * Glitchy rendering.
* Upped the spawn rate of most mobs.
* Baby Dragon is no longer glitchy.
* Began work on golden anvils.
    * In-game, but do not open GUIs yet, and therefore they are unobtainable in Survival.
* Added crops and food:
    * Blueberry
    * Blackberry
    * Grapes
    * Strawberries